--- a/src/App.scss
+++ b/src/App.scss
@@ -134,7 +134,7 @@
         border-radius: 50%;
         background-color: var(--white-color);
         margin: 0.25rem 0;
-        border: 1px solid var(--lightGray-color);
+        border: 1px solid var(--secondary-color);
 
         display: flex;
         justify-content: center;
@@ -145,12 +145,13 @@
         svg {
             width: 15px;
             height: 15px;
-            color: var(--gray-color);
+            color: var(--secondary-color);
         }
 
         &:hover {
             background-color: var(--secondary-color);
             border-color: var(--secondary-color);
+            box-shadow: 0px 0px 15px var(--secondary-color);
             cursor: pointer;
 
             svg {
