--- a/src/container/Header/Header.scss
+++ b/src/container/Header/Header.scss
@@ -79,6 +79,25 @@
             text-transform: uppercase;
             text-align: right;
         }
+
+        .cv-btn {
+            text-decoration: none;
+            color: var(--secondary-color);
+
+            padding: 0.7rem;
+            margin-top: 1rem;
+            font-weight: 600;
+            border: 1px solid var(--secondary-color);
+            border-radius: 10px;
+
+            transition: all 0.3s ease;
+
+            &:hover {
+                color: var(--white-color);
+                background: var(--secondary-color);
+                box-shadow: 0px 0px 10px var(--secondary-color);
+            }
+        }
     }
 
     span {
